kubernetes/k8s/dns/dns.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-server
  namespace: dns
spec:
  selector:
    matchLabels:
      app: dns-server
  replicas: 4
  template:
    metadata:
      labels:
        app: dns-server
    spec:
      containers:
        - name: dnsmasq
          image: ghcr.io/akashisn/dnsmasq@sha256:454b4b37d22b47865b4becd99da5e764e52de2ab13fabd4a2019dfb14f1edbc9
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: dnsmasq-conf
              mountPath: /etc/dnsmasq.d/dnsmasq.conf
              subPath: dnsmasq.conf
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
        - name: dnsdist
          image: ghcr.io/akashisn/dnsdist@sha256:496f9ac73feaefa8056cb1b4df636a4b5a2889385c87aebbef1c346605f36ee2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 53
              protocol: UDP
              name: dnsdist
            - containerPort: 443
              protocol: TCP
              name: dnsdist-doh
            - containerPort: 853
              protocol: TCP
              name: dnsdist-dot
          volumeMounts:
            - name: dnsdist-conf
              mountPath: /etc/dnsdist.conf
              subPath: dnsdist.conf
              readOnly: true
            - name: certs
              mountPath: /certs
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
      volumes:
        - name: certs
          secret:
            secretName: dns-cert
        - name: dnsmasq-conf
          configMap:
            name: dnsmasq-conf
        - name: dnsdist-conf
          configMap:
            name: dnsdist-conf
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: dns-pool
  labels:
    service: dns-server
  name: dns-server
  namespace: dns
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 53
      protocol: UDP
      name: dnsdist
    - port: 443
      protocol: TCP
      name: dnsdist-doh
    - port: 853
      protocol: TCP
      name: dnsdist-dot
  selector:
    app: dns-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dns-server
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  namespace: dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dns.akashisn.info
      secretName: dns-cert
  rules:
    - host: dns.akashisn.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dns-server
                port:
                  name: dnsdist-doh
